changed graph data structure to mimic weighted graph, mult_algorithm conversion still in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(src)
 
+set(BOOST_ROOT /usr/local/boost_1_66_0)
+#set(Boost_LIBRARY_DIR /usr/local/boost_1_67_0/libs)
+find_package(Boost 1.66 COMPONENTS ) #system filesystem REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+
 add_subdirectory(test)
 
 add_library(AlgorithmsDS
@@ -20,3 +25,4 @@ add_library(AlgorithmsDS
         src/VertexHeap.cpp
         src/VertexHeap.h)
 
+target_link_libraries(AlgorithmsDS ${Boost_LIBRARIES})
